feat(taller 2): :rocket: ejercicio 2

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 <body>
     <div>
         <h1>Ejercicio 1</h1>
-        <form action="post" id="myForm">
+        <form action="post" id="ejercicio1">
             <input type="text" name="nota1" placeholder="Digite nota 1"><br>
             <input type="text" name="nota2" placeholder="Digite nota 2"><br>
             <input type="text" name="nota3" placeholder="Digite nota 3"><br>
             <input type="submit" value="enviar">
         </form>
     
-        <pre></pre>
+        <pre id="ej1"></pre>
 
     </div>
 
     <div>
         <h1>Ejercico 2</h1>
         <form action="post" id="ejercicio2">
-            <input type="text" name="numeropar" placeholder="numero">
+            <input type="text" name="numero" placeholder="numero ev">
             <input type="submit" value="enviar">
         </form>
 
