--- a/index.html
+++ b/index.html
@@ -31,5 +31,13 @@
         <pre id="#ej2"></pre>
     </div>
     
+    <div>
+        <h1>Ejercicio 6</h1>
+        <form action="post" id="ejercicio6">
+            <input type="number" name="cantidad" placeholder="Cantidad estudiantes">
+            <input type="submit" value="enviar">
+        </form>
+        <pre id="ej6"></pre>
+    </div>
 </body>
 </html>
